--- a/PcBuilder.Client/src/app/modules/configurator/components/storage/storage.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/storage/storage.component.html
@@ -12,7 +12,7 @@
   <div class="footer">
       <div class="col-sm-12 footer_content">
         <div class="col-sm-3">
-            <p><span class="total_price">Total: ${{currentTotalPrice}}</span></p>
+            <p><span class="total_price">Total: ${{currentTotalPrice | number : '1.2-2'}}</span></p>
         </div>
         <div class="col-sm-6">
             <button class="btn btn-warning" (click)="goToVideocard()"> < Prev</button>
