--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/cpu-card/cpu-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/cpu-card/cpu-card.component.html
@@ -1,29 +1,33 @@
 <div class="card" [ngClass]="{'selected': cpu.isSelected}">
-    <div class="card_image">
-      <img src="../../../../../../assets/images/configurator/cpu/coffeLakeCoreI58400.jpg">
-      <div class="info">
-        <h2>Specifications:</h2>
-        <ul>
-          <li>
-            <strong>Socket:</strong>{{cpu.socket}}</li>
-          <li>
-            <strong>Series: </strong>{{cpu.series}}</li>
-          <li>
-            <strong>Zones: </strong>9 - 11</li>
-          <li>
-            <strong>Height: </strong>2 - 3 feet</li>
-          <li>
-            <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-          <li>
-            <strong>Features: </strong>Tolerates heat</li>
-        </ul>
-      </div>
-    </div>
-    <div class="card__content">
-      <div class="card__title"> {{cpu.title}}</div>
-      <p class="card__text">{{cpu.price}}$ </p>
-      <div class="buttons">
-        <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
-      </div>
+  <div class="card_image">
+    <img [src]="cpu.imageUrl">
+    <div class="info">
+      <h2>Specifications:</h2>
+      <ul>
+        <li>
+          <strong>Socket: </strong>{{cpu.socket}}</li>
+        <li>
+          <strong>Cores: </strong>{{cpu.cores}}</li>
+        <li>
+          <strong>Threads: </strong>{{cpu.threads}}</li>
+        <li>
+          <strong>Frequency: </strong>{{cpu.baseFrequency}} GHz / {{cpu.turboFrequency}} GHz</li>
+        <li>
+          <strong>Cache: </strong>{{cpu.cache}} MB</li>
+        <li>
+          <strong>Ram: </strong>{{cpu.typeOfRam}} - {{cpu.ramFrequency}} GHz</li>
+        <li *ngIf="cpu.hasStockCooler">
+          <strong>Stock cooler: </strong>Yes</li>
+        <li *ngIf="!cpu.hasStockCooler">
+          <strong>Stock cooler: </strong>No</li>
+      </ul>
     </div>
   </div>
+  <div class="card__content">
+    <div class="card__title"> {{cpu.title}}</div>
+    <p class="card__text">{{cpu.price}}$ </p>
+    <div class="buttons">
+      <button class="btn btn--block card__btn" (click)="onSelect()">Select</button>
+    </div>
+  </div>
+</div>
