--- a/PcBuilder.Client/src/app/modules/configurator/shared/components/storage-card/storage-card.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/shared/components/storage-card/storage-card.component.html
@@ -1,21 +1,21 @@
 <div class="card" [ngClass]="{'selected': storage.isSelected}">
   <div class="card_image">
-    <img src="../../../../../../assets/images/configurator/storage/hdd.jpg">
+    <img [src]="storage.imageUrl">
     <div class="info">
       <h2>Specifications:</h2>
       <ul>
         <li>
-          <strong>Socket:</strong>{{storage.socket}}</li>
+          <strong>Form-factor: </strong>{{storage.formFactor}}</li>
         <li>
-          <strong>Series: </strong>{{storage.series}}</li>
+          <strong>Interface: </strong>{{storage.interface}}</li>
         <li>
-          <strong>Zones: </strong>9 - 11</li>
-        <li>
-          <strong>Height: </strong>2 - 3 feet</li>
-        <li>
-          <strong>Blooms in: </strong>Mid‑Summer - Mid‑Fall</li>
-        <li>
-          <strong>Features: </strong>Tolerates heat</li>
+          <strong>Capacity: </strong>{{storage.capacity}}</li>
+        <li *ngIf="storage.rpm !== '0'">
+          <strong>Rpm: </strong>{{storage.rpm}}</li>
+        <li *ngIf="storage.writeSpeed !== ''">
+          <strong>Write-speed: </strong>{{storage.writeSpeed}}</li>
+        <li *ngIf="storage.readSpeed !== ''">
+          <strong>Read-speed: </strong>{{storage.readSpeed}}</li>
       </ul>
     </div>
   </div>
