added more pages to documentation and result page

--- a/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.html
@@ -1,3 +1,7 @@
-<p>
-  result works!
-</p>
+<div class="container-fluid">
+  <h3>Your configuration:</h3>
+  <div class="row">
+    <app-case-card [case]="case"></app-case-card>
+  </div>  
+
+</div>
