updated home and tutorial page

--- a/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/home/home.component.html
@@ -45,8 +45,8 @@
   <nav>
       <ul>
           <li><a routerLink="configurator/case"><i class="fa fa-desktop"></i>Configure</a></li>
-          <li><a routerLink="tutorial"><i class="fa fa-flash"></i>Tutorials</a></li>
-          <li><a routerLink="#screenshots"><i class="fa fa-heart"></i>Blog</a></li>
+          <li><a routerLink="tutorial"><i class="fa fa-graduation-cap"></i>Tutorials</a></li>
+          <li><a routerLink="community"><i class="fa fa-share-alt"></i>Community</a></li>
       </ul>
   </nav>
 </div>
