--- a/PcBuilder.Client/src/assets/css/styles.css
+++ b/PcBuilder.Client/src/assets/css/styles.css
@@ -1029,8 +1029,9 @@ Nav Overlay
     transition: all 300ms ease-in-out;
 }
 .overlay ul li a:hover, .overlay ul li a:focus {
-    border-color: black;
+    /* border-color: black; */
     color: white;
+    background-color: firebrick;
    
 }
 
