--- a/PcBuilder.Client/src/app/modules/core/components/tutorial/tutorial.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/tutorial/tutorial.component.html
@@ -368,8 +368,8 @@
     <nav>
         <ul>
             <li><a routerLink="../configurator/case"><i class="fa fa-desktop"></i>Configure</a></li>
-            <li><a routerLink=""><i class="fa fa-flash"></i>Home</a></li>
-            <li><a routerLink="#screenshots"><i class="fa fa-heart"></i>Blog</a></li>
+            <li><a routerLink=""><i class="fa fa-home"></i>Home</a></li>
+            <li><a routerLink="../community"><i class="fa fa-share-alt"></i>Community</a></li>
         </ul>
     </nav>
   </div>
