--- a/PcBuilder.Client/src/app/modules/core/components/community/community.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/community/community.component.html
@@ -1,3 +1,54 @@
-<p>
-  community works!
-</p>
+<header>
+  <section>
+    <div class="texture-overlay"></div>
+    <div class="container" style="margin-top:38px;">
+      <div class="row nav-wrapper">
+        <div class="col-md-6 col-sm-6 col-xs-6 text-left">
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
+          <p id="title">MENU</p>
+          <a id="trigger-overlay" class="nav_slide_button nav-toggle" [ngClass]="{'active': isActive}" (click)="isActive = !isActive; isOpen = !isOpen">
+            <span></span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+</header>
+
+<main>
+  <h2 style="text-align: center;">Completed builds:</h2>
+  <article *ngFor=" let post of posts" class="post">
+    <div class="post-image">
+      <img [src]="post.image" class="post-image">
+
+      <div class="post-price">{{post.price | number : '1.2-2'}} $</div>
+    </div>
+    <div class="post-card">
+
+      <a class="post-title" (click)="goToDetails(post)">{{post.title}}</a>
+      <div class="post-date">{{post.date | date : 'MMM dd yyyy'}}</div>
+      <div class="post-content">{{post.content}}</div>
+      <a class="post-read" (click)="goToDetails(post)">View details</a>
+    </div>
+  </article>
+</main>
+
+<div class="overlay overlay-boxify" [ngClass]="{'open': isOpen}">
+  <nav>
+    <ul>
+      <li>
+        <a routerLink="/configurator/case">
+          <i class="fa fa-desktop"></i>Configure</a>
+      </li>
+      <li>
+        <a routerLink="/tutorial">
+          <i class="fa fa-graduation-cap"></i>Tutorials</a>
+      </li>
+      <li>
+        <a routerLink="">
+          <i class="fa fa-home"></i>Home</a>
+      </li>
+    </ul>
+  </nav>
+</div>
