finished result page, community page and community-result page

--- a/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.css
@@ -357,3 +357,12 @@ a:hover {
 .added {
 	margin: 0 -50px 0 0 !important;
 }
+.buy-btn{
+	font-size: 19px;
+    line-height: 46px;
+    width: 70px;
+    text-align: center;
+	background: #007bff;
+	color: white;
+	border: 1px solid transparent;
+}
