--- a/PcBuilder.Client/src/app/modules/core/components/community/community.component.html
+++ b/PcBuilder.Client/src/app/modules/core/components/community/community.component.html
@@ -17,18 +17,19 @@
 </header>
 
 <main>
-  <h2 style="text-align: center;">Completed builds:</h2>
+  <h2 style="text-align: center;" *ngIf="exist">Completed builds:</h2>
+  <h2 style="text-align: center;" *ngIf="!exist">No completed builds :(</h2>
   <article *ngFor=" let post of posts" class="post">
     <div class="post-image">
-      <img [src]="post.image" class="post-image">
+      <img [src]="post.image" class="post-image" *ngIf="post.image">
 
-      <div class="post-price">{{post.price | number : '1.2-2'}} $</div>
+      <div class="post-price" *ngIf="post.price">{{post.price | number : '1.2-2'}} $</div>
     </div>
     <div class="post-card">
 
-      <a class="post-title" (click)="goToDetails(post)">{{post.title}}</a>
-      <div class="post-date">{{post.date | date : 'MMM dd yyyy'}}</div>
-      <div class="post-content">{{post.content}}</div>
+      <a class="post-title" (click)="goToDetails(post)" *ngIf="post.title">{{post.title}}</a>
+      <div class="post-date">{{post.creationDate | date : 'MMM dd yyyy'}}</div>
+      <div class="post-content" *ngIf="post.description">{{post.description}}</div>
       <a class="post-read" (click)="goToDetails(post)">View details</a>
     </div>
   </article>
