--- a/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.html
+++ b/PcBuilder.Client/src/app/modules/configurator/components/result/result.component.html
@@ -228,7 +228,8 @@
     <div class="right">
       <h1 class="total">Total:
         <span>{{totalPrice | number : '1.2-2'}}</span>$</h1>
-      <a class="btn" style="color:white" data-toggle="modal" data-target="#resultModal">Share</a>
+        <a class="btn" style="color:white; margin:15px; background: crimson;" (click)="home()">Home</a>
+      <a class="btn" style="color:white; margin:15px;" data-toggle="modal" data-target="#resultModal">Share</a>
     </div>
 
   </div>
