--- a/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/case/case.component.css
@@ -39,7 +39,7 @@ h3 {
   width: 100%;
   color: white;
   text-align: center;
-  padding: 10px;
+  /* padding: 10px; */
   height: 65px;
 }
 
@@ -75,4 +75,24 @@ h3 {
   color: #fff;
   font-weight: 700;
   font-size: 18px;
+}
+
+@media only screen and (max-width: 400px) {
+
+  .footer{
+    padding: 10px;
+  }
+  .footer-buttons{
+    display: flex;
+  }
+  .footer-buttons .btn {
+    height: 35px;
+  }
+  .total_price{
+    font-size: 15px;
+    padding: 0;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-radius: 15px;
+  }
 }
