--- a/PcBuilder.Client/src/app/modules/configurator/components/powerSupply/powerSupply.component.css
+++ b/PcBuilder.Client/src/app/modules/configurator/components/powerSupply/powerSupply.component.css
@@ -76,4 +76,34 @@ h3 {
     font-weight: 700;
     font-size: 18px;
   }
+
+  
+@media only screen and (max-width: 400px) {
+
+  .footer{
+    padding: 0;
+  }
+  .footer_content{
+    padding: 0;
+  }
+  .footer-buttons{
+    display: flex;
+    margin-top: 22px;
+  }
+  .footer-buttons .btn {
+    height: 35px;
+  }
+  .total_price{
+    padding: 0;
+    margin-top: 15px;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-radius: 15px;
+  }
+  .footer-price{
+    padding: 0;
+  }
+}
+
+
   
