--- a/PcBuilder.Client/src/app/modules/core/components/home/home.component.css
+++ b/PcBuilder.Client/src/app/modules/core/components/home/home.component.css
@@ -8,3 +8,11 @@ a:not([href]):not([tabindex]) {
 a{
     text-decoration: none;
 }
+
+@media only screen and (max-width: 415px) {
+    .overlay nav{
+        top:45%;
+        height: 95%;
+        margin-left: 20px;
+    }
+} 
